fix splash page images and banner alignment

--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -51,79 +51,3 @@
 .foot-left p {
   font-size: 14px;
 }
-
-
-.foot-right a:hover {
-  // background-color: $charcoal;
-  // color: $linen;
-  font-weight: normal;
-}
-
-// .nav-footer {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   height: 100px;
-//   width: 100%;
-//   padding: 0 2.5%;
-//   border-top: 4px solid $orange;
-//   box-shadow: 0 2px 4px rgba(0,0,0,0.25);
-//   box-sizing: border-box;
-//   background-color: $secondary;
-// }
-//
-// .nav-footer menu {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   height: 100%;
-// }
-//
-// .nav-footer ul {
-//   padding: 0 20px;
-// }
-//
-// .nav-footer li {
-//   vertical-align: middle;
-// }
-//
-// .nav-footer p {
-//   display: flex;
-//   align-items: center;
-// }
-//
-// .nav-footer a {
-//   font-weight: bold;
-//   height: 100%;
-//   vertical-align: middle;
-//   color: $gray;
-//   font-size: 15px;
-//   display: flex;
-//   align-items: center;
-//   padding: 15px;
-// }
-//
-// .nav-footer a:hover {
-//   color: $lime;
-// }
-//
-// .nav-footer small {
-//   color: $gray;
-//   text-align: right;
-//   padding-right: 35px;
-// }
-//
-// .github {
-//   border-bottom-color: #d971db;
-// }
-// .github:hover{
-//   background-color: #d971db;
-// }
-// .github-icon {
-//   width: 30px;
-//   height: 30px;
-//   position: relative;
-//   background: none;
-//   z-index: 100;
-//   bottom: 9px;
-// }
