--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -28,6 +28,7 @@
   justify-content: center;
   align-items: center;
   margin: 40px;
+  height: 30px;
 }
 
 .homepage-info-1 h2 {
@@ -72,9 +73,9 @@
 }
 
 .homepage-video {
-	height: 600px;
+	height: 700px;
 	padding-bottom: 50px;
-  padding-top: 120px;
+  padding-top: 235px;
 }
 
 .homepage-video video {
@@ -92,11 +93,12 @@
     font-size: 76px;
     font-weight: 700;
     text-align: center;
-    margin-top: 4.5%;
+    // margin-top: 4.5%;
     // padding-top: 85px;
     // padding-bottom: 85px;
     padding-top: 6.6%;
     padding-bottom: 6.6%;
+    height: 255px;
 }
 
 
@@ -105,27 +107,27 @@
   flex: 1;
   // min-height: 100px;
   // min-width: 175px;
-  height: 175px;
-  width: 300px;
-  margin-top: 50px;
+  height: 300px;
+  width: 400px;
+  margin-top: 100px;
 }
 .homepage-image-2 {
   display: flex;
   flex: 1;
   // min-height: 100px;
   // min-width: 175px;
-  height: 250px;
-  width: 400px;
-  margin-top: 50px;
+  height: 400px;
+  width: 300px;
+  margin-top: 100px;
 }
 .homepage-image-3 {
   display: flex;
   flex: 1;
   // min-height: 100px;
   // min-width: 175px;
-  height: 175px;
-  width: 325px;
-  margin-top: 50px;
+  height: 350px;
+  width: 550px;
+  margin-top: 100px;
 }
 
 
